--- a/package.json
+++ b/package.json
@@ -30,8 +30,12 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/voice": "^1.1.9",
-    "@react-native-firebase/analytics": "^14.7.0",
-    "@react-native-firebase/app": "^14.7.0",
+    "@react-native-firebase/analytics": "^14.8.1",
+    "@react-native-firebase/app": "^14.8.1",
+    "@react-native-firebase/auth": "^14.8.1",
+    "@react-native-firebase/database": "^14.9.1",
+    "@react-native-firebase/firestore": "^14.8.1",
+    "@react-native-firebase/storage": "^14.8.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "~6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
@@ -51,6 +55,7 @@
     "mobx-state-tree": "5.0.1",
     "react": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "1.10.3",
     "react-native-keychain": "6.2.0",
     "react-native-reanimated": "^2.4.1",
@@ -109,99 +114,5 @@
     "solidarity": "2.3.1",
     "ts-jest": "26",
     "typescript": "4.2.3"
-  },
-  "prettier": {
-    "printWidth": 100,
-    "semi": false,
-    "singleQuote": false,
-    "trailingComma": "all"
-  },
-  "detox": {
-    "test-runner": "jest",
-    "configurations": {
-      "ios.sim.debug": {
-        "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/EnglishApp.app",
-        "build": "xcodebuild -workspace ios/EnglishApp.xcworkspace -scheme EnglishApp -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build -destination 'name=iPhone 11'",
-        "type": "ios.simulator",
-        "device": {
-          "name": "iPhone 11",
-          "os": "iOS 13.2"
-        }
-      },
-      "ios.sim.release": {
-        "binaryPath": "ios/build/Build/Products/Release-iphonesimulator/EnglishApp.app",
-        "build": "xcodebuild -workspace ios/EnglishApp.xcworkspace -scheme EnglishApp -configuration Release -sdk iphonesimulator -derivedDataPath ios/build -destination 'name=iPhone 11'",
-        "type": "ios.simulator",
-        "device": {
-          "name": "iPhone 11",
-          "os": "iOS 13.2"
-        }
-      }
-    }
-  },
-  "eslintConfig": {
-    "root": true,
-    "parser": "@typescript-eslint/parser",
-    "extends": [
-      "plugin:@typescript-eslint/recommended",
-      "plugin:react/recommended",
-      "plugin:react-native/all",
-      "standard",
-      "prettier",
-      "prettier/@typescript-eslint"
-    ],
-    "plugins": [
-      "@typescript-eslint",
-      "react",
-      "react-native"
-    ],
-    "parserOptions": {
-      "ecmaFeatures": {
-        "jsx": true
-      },
-      "project": "./tsconfig.json"
-    },
-    "settings": {
-      "react": {
-        "pragma": "React",
-        "version": "detect"
-      }
-    },
-    "globals": {
-      "__DEV__": false,
-      "jasmine": false,
-      "beforeAll": false,
-      "afterAll": false,
-      "beforeEach": false,
-      "afterEach": false,
-      "test": false,
-      "expect": false,
-      "describe": false,
-      "jest": false,
-      "it": false
-    },
-    "rules": {
-      "@typescript-eslint/ban-ts-ignore": 0,
-      "@typescript-eslint/ban-ts-comment": 0,
-      "@typescript-eslint/explicit-function-return-type": 0,
-      "@typescript-eslint/explicit-member-accessibility": 0,
-      "@typescript-eslint/explicit-module-boundary-types": 0,
-      "@typescript-eslint/indent": 0,
-      "@typescript-eslint/member-delimiter-style": 0,
-      "@typescript-eslint/no-empty-interface": 0,
-      "@typescript-eslint/no-explicit-any": 0,
-      "@typescript-eslint/no-object-literal-type-assertion": 0,
-      "@typescript-eslint/no-var-requires": 0,
-      "comma-dangle": 0,
-      "multiline-ternary": 0,
-      "no-undef": 0,
-      "no-unused-vars": 0,
-      "no-use-before-define": "off",
-      "quotes": 0,
-      "react-native/no-raw-text": 0,
-      "react/no-unescaped-entities": 0,
-      "react/prop-types": "off",
-      "space-before-function-paren": 0
-    }
   }
 }
