--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-native-safe-area-context": "3.1.8",
     "react-native-screens": "3.8.0",
     "react-native-svg": "^12.3.0",
+    "react-native-toast-message": "^2.1.5",
     "react-native-tts": "^4.1.0",
     "reactotron-mst": "3.1.4",
     "reactotron-react-js": "^3.3.7",
