Add lottie splash screen

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -196,6 +196,8 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"
     implementation project(path: ':@react-native-community_voice')  // From node_modules
+    implementation project(':react-native-lottie-splash-screen')
+
     def isGifEnabled = (findProperty('expo.gif.enabled') ?: "") == "true";
     def isWebpEnabled = (findProperty('expo.webp.enabled') ?: "") == "true";
     def isWebpAnimatedEnabled = (findProperty('expo.webp.animated') ?: "") == "true";
