--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,7 +19,7 @@ target 'EnglishApp' do
   )
 
   pod 'react-native-voice', :path => '../node_modules/@react-native-community/voice'
-
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
   pod 'TextToSpeech', :path => '../node_modules/react-native-tts'
 
   target 'EnglishAppTests' do
