--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "1.10.3",
     "react-native-keychain": "6.2.0",
+    "react-native-lottie-splash-screen": "^0.1.14",
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "3.1.8",
     "react-native-screens": "3.8.0",
