--- a/package.json
+++ b/package.json
@@ -30,20 +30,20 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/voice": "^1.1.9",
-    "@react-native-firebase/analytics": "^14.8.1",
-    "@react-native-firebase/app": "^14.8.1",
-    "@react-native-firebase/auth": "^14.8.1",
-    "@react-native-firebase/database": "^14.9.1",
-    "@react-native-firebase/firestore": "^14.8.1",
-    "@react-native-firebase/storage": "^14.8.1",
+    "@react-native-firebase/analytics": "^14.9.4",
+    "@react-native-firebase/app": "^14.9.4",
+    "@react-native-firebase/auth": "^14.9.4",
+    "@react-native-firebase/database": "^14.9.4",
+    "@react-native-firebase/firestore": "^14.9.4",
+    "@react-native-firebase/storage": "^14.9.4",
     "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "~6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
     "@react-navigation/stack": "~6.0.1",
     "@types/lodash": "^4.14.182",
     "apisauce": "2.0.0",
     "expo": "~44.0.6",
-    "expo-linear-gradient": "^11.0.3",
     "expo-localization": "12.0.1",
     "expo-modules-core": "^0.6.5",
     "i18n-js": "3.8.0",
@@ -57,6 +57,7 @@
     "react-native": "0.67.2",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "1.10.3",
+    "react-native-image-picker": "^4.8.3",
     "react-native-keychain": "6.2.0",
     "react-native-lottie-splash-screen": "^0.1.14",
     "react-native-reanimated": "^2.4.1",
