--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "@react-native-firebase/auth": "^14.9.4",
     "@react-native-firebase/database": "^14.9.4",
     "@react-native-firebase/firestore": "^14.9.4",
-    "@react-native-firebase/storage": "^14.9.4",
     "@react-native-firebase/messaging": "^14.9.4",
+    "@react-native-firebase/storage": "^14.9.4",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "~6.0.1",
@@ -61,6 +61,7 @@
     "react-native-image-picker": "^4.8.3",
     "react-native-keychain": "6.2.0",
     "react-native-lottie-splash-screen": "^0.1.14",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "3.1.8",
     "react-native-screens": "3.8.0",
