--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.MICROPHONE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
     <uses-feature android:name="android.hardware.microphone" android:required="true" />
 
     <application
@@ -13,6 +15,32 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+        <meta-data android:name="com.dieam.reactnativepushnotification.notification_foreground"
+          android:value="false"/>
+          <!-- Change the resource name to your App's accent color - or any other color you want -->
+          <meta-data android:name="com.dieam.reactnativepushnotification.notification_color"
+          android:resource="@color/white"/> <!-- or @android:color/{name} to use a standard color -->
+
+          <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationActions" />
+          <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationPublisher" />
+          <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationBootEventReceiver">
+            <intent-filter>
+              <action android:name="android.intent.action.BOOT_COMPLETED" />
+              <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+              <action android:name="com.htc.intent.action.QUICKBOOT_POWERON"/>
+            </intent-filter>
+          </receiver>
+
+          <!-- android:directBootAware="true" to enable direct boot mode message handling in your app -->
+          <service
+            android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationListenerService"
+            android:exported="false"
+            android:directBootAware="true"
+          >
+            <intent-filter>
+              <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+          </service>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
