--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         targetSdkVersion = 29
         ndkVersion = "21.4.7075529"
         kotlin_version = "1.6.0" // Update this to your version
+        googlePlayServicesAuthVersion = "19.2.0" // <--- google config
     }
     repositories {
         google()
@@ -16,7 +17,7 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle:4.2.2")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
-         classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.google.gms:google-services:4.3.10'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
