--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "1.10.3",
     "react-native-image-picker": "^4.8.3",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-keychain": "6.2.0",
     "react-native-lottie-splash-screen": "^0.1.14",
     "react-native-push-notification": "^8.1.1",
