--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -14,7 +14,9 @@
 expo.webp.enabled=true
 expo.webp.animated=false
 expo.gif.enabled=true
-org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+# org.gradle.jvmargs=-Xmx1536M --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
 android.useAndroidX=true
 android.enableJetifier=true
 FLIPPER_VERSION=0.99.0
+org.gradle.jvmargs=--add-opens java.base/java.io=ALL-UNNAMED
+
