--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/voice": "^1.1.9",
-    "@react-native-firebase/analytics": "^14.9.4",
-    "@react-native-firebase/app": "^14.9.4",
-    "@react-native-firebase/auth": "^14.9.4",
-    "@react-native-firebase/database": "^14.9.4",
-    "@react-native-firebase/firestore": "^14.9.4",
-    "@react-native-firebase/messaging": "^14.9.4",
-    "@react-native-firebase/storage": "^14.9.4",
+    "@react-native-firebase/analytics": "14.9.4",
+    "@react-native-firebase/app": "14.9.4",
+    "@react-native-firebase/auth": "14.9.4",
+    "@react-native-firebase/database": "14.9.4",
+    "@react-native-firebase/firestore": "14.9.4",
+    "@react-native-firebase/messaging": "14.9.4",
+    "@react-native-firebase/storage": "14.9.4",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "~6.0.1",
