--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@react-navigation/stack": "~6.0.1",
     "@types/lodash": "^4.14.182",
     "apisauce": "2.0.0",
+    "axios": "^1.4.0",
     "expo": "~44.0.6",
     "expo-localization": "12.0.1",
     "expo-modules-core": "^0.6.5",
