--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mobx": "6.1.8",
     "mobx-react-lite": "3.2.0",
     "mobx-state-tree": "5.0.1",
+    "moment": "^2.29.4",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-fast-image": "^8.5.11",
